sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: value i is not a member of Boolean
    while(!plusPetitQue(i-j,tampon)i-j>=0 && i-j>=0){
                                   ^